<resources>
    <string name="app_name">Celesta 2k17</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="my_profile">My Profile</string>
    <string name="events">Events</string>
    <string name="schedule">Schedule</string>
    <string name="team">Team</string>
    <string name="developers">App Developers</string>
    <string name="sponsors">Sponsors</string>
    <string name="about">About</string>
    <string name="gallery">Gallery</string>
    <string name="social">Social</string>
    <string name="SignUp">Sign Up</string>
    <string name="SignIn">Sign In</string>
    <string name="NJACK_Events">NJACK Events</string>
    <string name="ACE_Events">ACE Events</string>
    <string name="SAE_Events">SAE Events</string>
    <string name="SCME_Events">SCME Events</string>
    <string name="Sparkonics_Events">Sparkonics Events</string>
    <string name="Threshold_Events">Threshold Events</string>
    <string name="login_status">login_status</string>
    <string name="full_name">full_name</string>
    <string name="id">id</string>
    <string name="college_name">college_name</string>
    <string name="event_participated">event_participated</string>
    <string name="first_name_hint">First Name</string>
    <string name="last_name_hint">Last Name</string>
    <string name="college_hint">College</string>
    <string name="email_id_hint">Email ID</string>
    <string name="password_hint">Password</string>
    <string name="confirm_password_hint">Confirm Password</string>
    <string name="register_button">REGISTER</string>
    <string name="error_invalid_email">Invalid Email!</string>
    <string name="invalid_password_length">Length should be more than 5 characters</string>
    <string name="error_password_match">Passwords don\'t match</string>
    <string name="error_empty_field">Empty Field</string>
    <string name="mobile_no_hint">Mobile No.</string>
    <string name="error_invalid_mobile_no">Invalid Mobile No.</string>
    <string name="register_url">http://celesta.org.in/api/register</string>
    <string name="api_key">iitp</string>
    <string name="register_param_name">name</string>
    <string name="register_param_college">college</string>
    <string name="register_param_emailid">emailid</string>
    <string name="register_param_password">password</string>
    <string name="register_param_mobile">mobile</string>
    <string name="register_param_apiKey">apiKey</string>
    <string name="JSON_status">status</string>
    <string name="message_registration_success">Registration Successful.  Check your Email for the UniqueID!!</string>
    <string name="message_registration_duplicate">This Email is registered. Please Sign In</string>
    <string name="Clubs"> Clubs</string>
    <string name="LoremIpsum"> Believable. If you are going to use a passage of Lorem Ipsum, you need to be sure there isn\'t anything embarrassing hidden in the middle of text. All the Lorem Ipsum generators on the Internet tend to repeat predefined chunks as necessary, making this the first true generator on the InternetIt uses a you need to be sure there isn\'t anything embarrassing hidden in the middle of text. All the Lorem Ipsum generators on the Internet tend to repeat predefined chunks as necessary, making</string>
    <string name="title_activity_schedule">Schedule</string>
    <string name="share_to">Share To</string>
    <string name="share_message">Check out this event in IIT Patna\'s technical fest Celesta:</string>
    <string name="name">Name</string>
    <string name="date_time">Date &amp; Time</string>
    <string name="description">Description</string>
    <string name="rules_and_regulations">Rules &amp; Regulations</string>
    <string name="event_organizers">Event Organizers</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="keep_checking_for_updates">Keep checking for updates.</string>
    <string name="follow_us">Follow us </string>
    <string name="official_website">Our official website</string>
    <string name="coming_soon">Coming Soon</string>
    <string name="url_login">https://celesta.org.in/api/login</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="url_forgot_password">http://celesta.org.in/reset</string>
    <string name="username">User Name </string>

    <string name="sign_up_label">Sign Up</string>
    <string name="log_in_label">Log In</string>
    <string name="email_hint">Email</string>
    <string name="confirm_hint">Confirm Password</string>
    <string name="my_profile_icon">my_profile_icon</string>
    <string name="events_icon">events_icon</string>
    <string name="schedule_icon">schedule_icon</string>
    <string name="team_icon">team_icon</string>
    <string name="app_developers_icon">app_developers_icon</string>
    <string name="sponsors_icon">sponsors_icon</string>
    <string name="about_icon">about_icon</string>
    <string name="social_icon">social_icon</string>
    <string name="mayank_image">mayank_image</string>
    <string name="mayank_vaidya">Mayank Vaidya</string>
    <string name="mayank8318">mayank8318</string>
    <string name="fb_icon">fb_icon</string>
    <string name="github_icon">github_icon</string>
    <string name="mukunta_image">mukunta_image</string>
    <string name="mukuntha_n_s">Mukuntha N S</string>
    <string name="muks14">muks14</string>
    <string name="manish_image">manish_image</string>
    <string name="ivary43">ivary43</string>
    <string name="ipl_auction_image">ipl_auction_image</string>
    <string name="login_background">login_background</string>
    <string name="linked_icon">linked_icon</string>
    <string name="twitter_icon">twitter_icon</string>
    <string name="login_icon">login_icon</string>
    <string name="manish_kumar">Manish Kumar</string>
    <string name="Id">Id</string>
    <string name="celesta_id">122443</string>
    <string name="college">College</string>
    <string name="iit_patna">IIT Patna</string>
    <string name="njath_cpt">NJATH,CPT</string>
    <string name="time">Time :</string>
    <string name="location">Location :</string>
    <string name="card_image">card_image</string>
    <string name="gallery_image">gallery_image</string>
    <string name="this_was_a_whole_new_level_of_race_foe_jkdjfd_dfjdidfd_fdf_dd_fdkfdjfkdjfdfdfd_fdfd_fdfdfdfldfjdlfjdldjfdlfdjdljdldjdlfjddldjf">This was a whole new level of race foe jkdjfd dfjdidfd fdf dd fdkfdjfkdjfdfdfd fdfd fdfdfdfldfjdlfjdldjfdlfdjdljdldjdlfjddldjf</string>
    <string name="log_in">Log In</string>
    <string name="log_out">Log Out</string>
</resources>
