<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/signedIn"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/colorPrimaryDark"
    android:orientation="vertical">

    <RelativeLayout

        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <RelativeLayout
            android:id="@+id/layoutTop"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:background="@color/cardBackgroundEvents">

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/layoutBottom"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_below="@id/layoutTop"
            android:background="@color/colorPrimaryDark">

        </RelativeLayout>
        <!--Circle including the initial name -->
        <RelativeLayout
            android:id="@+id/overlapImage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@id/layoutBottom"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="-40dp"
            android:adjustViewBounds="true"
            android:background="@drawable/circle"
            android:gravity="center_vertical">

            <TextView
                android:id="@+id/nameTextView"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:paddingTop="35dp"
                android:textAlignment="center"
                android:textColor="#fff"
                android:textSize="28sp"
                tools:text="MS" />
        </RelativeLayout>

    </RelativeLayout>
    <!--Text name and other values -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/fullName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="48dp"
            android:layout_marginTop="12dp"
            android:fontFamily="sans-serif-medium"
            android:text="@string/manish_kumar"
            android:textAlignment="center"
            android:textColor="#fff"
            android:textSize="32sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16sp"
            android:fontFamily="sans-serif-light"
            android:text="@string/my_profile"
            android:textColor="#fff"
            android:textSize="20sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16sp"
            android:layout_weight="1"
            android:fontFamily="sans-serif-medium"
            android:text="@string/Id"
            android:textColor="#fff"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/idValue"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_marginLeft="16sp"
            android:layout_marginRight="16sp"
            android:layout_weight="1"
            android:fontFamily="sans-serif-light"
            android:text="@string/celesta_id"
            android:textAlignment="textEnd"
            android:textColor="#fff"
            android:textSize="20sp" />

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginLeft="16sp"
        android:layout_marginRight="16sp"
        android:layout_marginTop="10dp"
        android:background="#fff">

    </View>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16sp"
            android:layout_weight="1"
            android:fontFamily="sans-serif-medium"
            android:text="@string/college"
            android:textColor="#fff"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/collegeNameValue"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_marginLeft="16sp"
            android:layout_marginRight="16sp"
            android:layout_weight="1"
            android:fontFamily="sans-serif-light"
            android:text="@string/iit_patna"
            android:textAlignment="textEnd"
            android:textColor="#fff"
            android:textSize="20sp" />

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginLeft="16sp"
        android:layout_marginRight="16sp"
        android:layout_marginTop="10dp"
        android:background="#fff">

    </View>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="24dp"
        android:orientation="horizontal">

        <!--<TextView-->
            <!--android:layout_width="0dp"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:layout_marginLeft="16sp"-->
            <!--android:layout_weight="1"-->
            <!--android:fontFamily="sans-serif-medium"-->
            <!--android:text="Events"-->
            <!--android:textColor="#fff"-->
            <!--android:textSize="20sp" />-->

        <TextView
            android:id="@+id/eventsParticipatedValue"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_gravity="end"
            android:layout_marginLeft="16sp"
            android:layout_marginRight="16sp"
            android:layout_weight="1"
            android:fontFamily="sans-serif-light"
            android:text="@string/njath_cpt"
            android:textAlignment="textEnd"
            android:textColor="#fff"
            android:textSize="20sp" />

    </LinearLayout>

</LinearLayout>



